<resources>
    <string name="app_name">KuCoblos</string>
    <string name="chekbox">Dengan mendaftar,saya menyetujui
Syarat dan Ketentuan serta Kebijakan Privasi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news1"></string>
    <string name="Header1">Anggota DPR Tegur Menkes soal Raffi Nongkrong Usai Divaksin</string>
    <string name="isiBerita1">Jakarta, CNN Indonesia -- Anggota Komisi IX DPR RI Netty Prasetiyani menegur Menteri Kesehatan (Menkes) Budi Gunadi Sadikin soal selebritas Raffi Ahmad yang kedapatan nongkrong tanpa protokol kesehatan sesaat setelah menerima suntik vaksin virus corona Sinovac.
        Netty khawatir tindakan Raffi bisa memberikan dampak buruk bagi progran vaksinasi. Ia meminta pemerintah untuk bertindak.
        \n\n"Saya juga diprotes, Pak Menteri, Pak Wamen, ada salah satu influencer diundang untuk vaksin, malamnya berpesta tanpa masker dan sebagainya. Ini kan sebetulnya contoh tidak baik," kata Netty dalam Rapat Kerja Komisi IX DPR RI di Kompleks Parlemen, Jakarta, Kamis (14/1).
        \n\nPolitikus PKS itu juga menyayangkan respons Juru Bicara Vaksin Siti Nadia Tarmizi yang menyebut teguran netizen kepada akan lebih bermanfaat. Menurut Netty, pernyataan itu tidak tepat.
        \n\nNetty mempertanyakan konsistensi pemerintah. Di saat menghadapi rakyat, pemerintah berani tegas. Ia pun meminta hal serupa diterapkan dalam kasus Raffi.
        \n\n"Kalau masyarakat diminta disiplin, ya berarti disiplin, dimulai dari pejabat publik dan orang-orang yang dianggap menjadi influencer yang sudah digadang-gadang pemerintah," ujarnya.
        \n\nJuru Bicara Vaksin Covid-19 dari Kementerian Kesehatan, Siti Nadia Tarmizi menyesalkan ulah Rafii yang keluyuran dan abai protokol kesehatan usai divaksin. Tapi saat ditanya soal kemungkinan menegur, dia mengatakan pihak Istana telah menyampaikan teguran tersebut.
        \n\nNadia juga merasa, teguran sosial yang diberikan warganet akan lebih mampu mengingatkan para pelanggar prokes.
        \n\nSebelumnya, media sosial dihebohkan ulah Raffi yang langsung nongkrong tanpa protokol kesehatan beberapa jam setelah vaksinasi bersama Presiden Joko Widodo.
        \n\nDalam unggahan itu, Raffi berfoto dengan Anya, Nagita Slavina, Sean Gelael, dan Gading Marten tanpa mengenakan masker dan jaga jarak.
        \n\nRaffi adalah salah satu tokoh masyarakat yang ikut vaksinasi perdana, Rabu (13/1). Selain Raffi, ada Presiden Jokowi, Menkes Budi Gunadi Sadikin, dan Kepala BPOM Penny Lukito.
    </string>
    <string name="Header2">Keppres Jokowi hingga Pencopotan Arief Budiman dari Ketua KPU</string>
    <string name="isiBerita2">Jakarta, CNN Indonesia -- Arief Budiman dicopot dari jabatan Ketua Komisi Pemilihan Umum (KPU) pada Rabu (13/1), karena dinyatakan melanggar kode etik oleh Dewan Kehormatan Penyelenggara Pemilu (DKPP). Putusan itu merupakan buntut panjang dari pemecatan Komisioner Evi Novida Ginting.
\nPerkara bermula dari sengketa hasil Pileg DPRD Kalbar antara dua caleg Partai Gerindra, Hendri Makaluasc dan Cok Hendri Ramapon. Keduanya bersengketa terhadap perolehan suara 19 desa yang menjadi penentu kemenangan.
\n\nDKPP menyatakan Evi bertanggung jawab atas ketidakpastian hukum dalam sengketa itu. Evi saat itu menjabat Koordinator Divisi Teknis Penyelenggaraan dan Logistik Pemilu KPU RI.
\n\nSaat perkara berjalan, KPU Kalbar sempat menyurati KPU RI untuk meminta arahan. KPU RI meminta KPU Kalbar tidak melaksanakan putusan Bawaslu untuk mengoreksi hasil perolehan suara.
\n\n"Menjatuhkan sanksi pemberhentian tetap kepada Teradu VII Evi Novida Ginting Manik selaku Anggota KPU RI sejak putusan ini dibacakan," kata Ketua Majelis Muhammad pada sidang di Kantor DKPP, Jakarta, 18 Maret 2020.

\n\nPutusan itu ditindaklanjuti Presiden Jokowi dengan menandatangani Keputusan Presiden Nomor 34/P Tahun 2020. Evi dipecat secara tidak terhormat per tanggal 23 Maret 2020.


\n\nEvi tidak terima dengan putusan itu lantas menggugatnya ke Pengadilan Tata Usaha Negara (PTUN) Jakarta. Arief Budiman disebut mengantar Evi ketika mengurus gugatan ke PTUN Jakarta pada 18 Maret 2020.

\n\nEmpat bulan sidang berjalan, PTUN Jakarta mengabulkan gugatan Evi. PTUN meminta Jokowi mencabut Keppres pemecatan Evi dari jabatan Komisioner KPU.

\n\nJokowi pun menerbitkan Keputusan Presiden Nomor 83/P Tahun 2020 untuk mencabut pemecatan Evi. KPU RI menerbitkan Surat Nomor 663/SDM.12-SD/05/KPU/VIII/2020 sebagai pengaktifan kembali Evi sebagai Komisioner KPU.

\n\nMasalah berlanjut saat seorang wiraswasta bernama Jupri melaporkan Arief ke DKPP. Jupri mempermasalahkan keikutsertaan Arief saat Evi mengajukan gugatan ke PTUN Jakarta.

\n\nKomisioner KPU, Evi Novida Ginting mengikuti rapat dengar pendapat dengan Komisi II DPR di Kompleks Parlemen, Senayan, Jakarta, Selasa, 21 November 2017. Rapat tersebut membahas revisi Peraturan KPU (PKPU) tentang syarat dukungan calon perseorangan (indipenden) serta membahas Peraturan Bawaslu (Perbawaslu). CNNIndonesia/Adhi Wicaksono.Komisioner KPU, Evi Novida Ginting saat mengikuti rapat dengar pendapat dengan Komisi II DPR di Kompleks Parlemen, Senayan, Jakarta, Selasa, 21 November 2017. (Foto: CNN Indonesia/Adhi Wicaksono)
\nJupri juga mempermasalahkan keputusan Arief mengaktifkan kembali Evi sebagai Komisioner KPU RI. Dia menyebut Arief membuat keputusan yang diduga melampaui kewenangan.

\n\nDalam persidangan, Arief membantah ia memberi pendampingan kepada Evi. Menurut Arief, ia datang sebagai individu, bukan Ketua KPU. Ia hendak memberi dukungan moral terhadap Evi.

\n\nArief juga merasa tidak bersalah dengan menerbitkan surat pengaktifan kembali Evi sebagai komisioner. Ia merujuk pada Keppres Nomor 83/P/ 2020 yang ditandatangani Presiden Jokowi.

\n\n"Adapun Teradu perlu sampaikan juga bahwa pendaftaran gugatan ke PTUN Jakarta yang diajukan oleh Sdri. Evi Novida Ginting Manik dan Kuasa Hukumnya dilakukan elektronik pada pukul 07.31 WIB (Bukti T-1), sedangkan Teradu datang pada waktu menjelang jam makan siang, setelah pendaftaran tersebut dilakukan," dikutip dari risalah putusan.

\n\nMeski begitu, DKPP tetap menyatakan Arief melanggar etik. Kehadiran Arief dinilai terkesan bahwa KPU RI membangkang putusan DKPP soal pemecatan Evi.

\n\n"Menjatuhkan sanksi Peringatan Keras Terakhir dan Pemberhentian Dari Jabatan Ketua KPU RI kepada Teradu Arief Budiman selaku Ketua KPU RI sejak putusan ini dibacakan," kata Ketua DKPP yang merangkap Ketua Majelis Muhammad dalam sidang yang digelar di Kantor DKPP, Jakarta, Kamis (14/1).
    </string>
    <string name="Header3">Tolak Vaksin Corona, Ribka Tjiptaning Mengaku Ditegur PDIP</string>
    <string name="isiBerita3">Jakarta, CNN Indonesia -- Anggota DPR Komisi IX dari PDIP Ribka Tjiptaning mengaku ditegur oleh fraksinya lantaran menolak vaksin virus corona (Covid-19). Namun, menurutnya teguran itu merupakan konsekuensi yang harus diterimanya demi memperjuangkan keamanan rakyat.
"Saya sampai ditegur partai saya, tidak tahu laporan siapa, tapi itu konsekuensi logis," ujarnya dalam rapat kerja Komisi IX bersama Menteri Kesehatan, Kepala BPOM, dan Direktur Utama PT Biofarma (Persero), Rabu (13/1).

Lihat juga: Politikus PDIP Ribka Tjiptaning Tolak Divaksin Covid-19
Ribka menekankan bahwa dirinya dipilih oleh masyarakat lewat Pemilu. Oleh karena itu, dia juga ingin memastikan keamanan masyarakat yang akan diberi vaksin virus corona.



"Ini keamanan untuk rakyat, waktu rakyat memilih saya tidak ragu, jadi saya bicara tidak ragu yang mengenai kebenaran," ucapnya.

\n\nIa pun kembali mengungkapkan alasannya menolak mengikuti program vaksinasi. Dia masih meragukan kejelasan dari efektivitas vaksin tersebut.

\n\nDia berkaca dari pengalaman pemberian sejumlah vaksin lainnya, yang justru membuat orang lumpuh hingga meninggal dunia. Misalnya, vaksin anti polio membuat sejumlah orang lumpuh di Sukabumi dan vaksin anti kaki gajah di Majalaya menyebabkan 12 orang meninggal dunia.

\n\n"Kenapa saya menolak divaksin? Karena belum jelas begitu. Dan saya mengalami waktu menjadi ketua komisi itu 2 kali, masalah vaksin yang saya anggap bermasalah, kalau gagal tidak sampai disitu tapi bermasalah," tuturnya.
\nTak hanya itu, Ribka mengaku disentil oleh sejawatnya dalam grup WhatsApp karena menolak vaksin Covid-19. Sedangkan, sejumlah politisi PDIP lainnya mengaku siap mengikuti vaksinasi Covid-19.

\n\n"Saya diledekin di-WhatsApp saya itu PDI Perjuangan, nyinyir semua saya siap divaksin, siap divaksin, menyindir saya karena saya kan tidak mau divaksin," ucap Ribka.

\n\nSaya bilang pasti milih yang Rp2 juta toh, anggota DPR pasti pilih yang mahal, kalau yang mahal pasti safety, kalau murah pasti untuk rakyat miskin kebiasaannya begitu," sambungnya.

\n\nBahkan, ia mengaku memilih membayar denda ketimbang disuntik vaksin Covid-19.

\n\n\"Kedua, kalau persoalan vaksin saya tetap tidak mau divaksin maupun sampai yang 63 tahun bisa divaksin, saya sudah 63 tahun nih. Mau semua yang usia boleh, tetap, misalnya hidup di DKI Jakarta semua anak cucu saya dapat sanksi Rp5 juta mending saya bayar," ujarnya dalam rapat tersebut.

\n\nPernyataan Ribka itu ditanggapi oleh Sekretaris Jenderal DPP PDIP, Hasto Kristiyanto. Menurutnya, pernyataan Ribka sebenarnya bertujuan agar kepentingan dan keselamatan masyarakat dikedepankan dalam pelaksanaan program vaksinasi covid-19.

\n\n"Ribka Tjiptaning, jika melihat pernyataan secara menyeluruh sebagai satu kesatuan pesan, yang disampaikan adalah mengingatkan garis kebijakan politik kesehatan yang seharusnya kedepankan kepentingan dan keselamatan masyarakat," kata Hasto dalam keterangannya.</string>
    <string name="Header4">PKB Minta Agama Calon Kapolri Komjen Listyo Tak Dipersoalkan</string>
    <string name="Header5">DPR Harap DKPP Sudah Kaji Matang Pemberhentian Ketua KPU</string>
    <string name="Header6">NasDem Apresiasi Jokowi Pilih Calon Kapolri Tanpa Lihat Agama</string>
    <string name="Header7">Respons Listyo Jadi Calon Kapolri, DPR Undang PPATK-Kompolnas</string>
    <string name="kelebihanAdit">Kelebihan :\n -Kalau disuruh mama beli telur, langsung membelinya \n
        -Sanggup menahan rasa sakit ketika jari kelingking kaki kejedut kursi/meja \n
    -Mampu mencari gunting kuku dengan cepat ketika butuh</string>
    <string name="kelebihanAgus">Kelebihan :\n -Bisa angkat galon \n -Bisa bernafas \n -Bisa melihat</string>
    <string name="kelebihanArep">Kelebihan :\n-Bisa bongkar pasang ban kendaraan sendiri \n -Bisa mengendarai mobil \n -Bisa berenang gaya dada</string>
    <string name="quoteAdit">Quotes : Seberat apapun pekerjaan, apabila tidak dikerjakan maka akan terasa ringan.</string>
    <string name="quoteAgus">Quotes : Jangan percaya orang-orang di internet</string>
    <string name="quoteArep">Quotes : Masa depan adalah milik mereka yang percaya pada keindahan impian mereka</string>
</resources>