<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:background="@color/navyBlue">

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@drawable/circle" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
           <TextView
               android:id="@+id/tvHeader"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Sudahkah Membaca Berita Hari Ini?"
               android:textColor="@android:color/white"
               android:textSize="20dp"
               android:textStyle="italic|bold"
               android:layout_marginBottom="15dp"
               android:gravity="center"
               android:padding="20dp"/>
            <EditText
                android:id="@+id/etSearch"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:hint="Cari Berita"
                android:textColorHint="#C0C0C0"
                android:layout_below="@id/tvHeader"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:ems="50"
                android:inputType="text"
                android:layout_marginBottom="7dp"
                android:imeOptions="actionSearch"/>
            <ImageButton
                android:id="@+id/ibCari"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_search"
                android:background="@color/navyBlue"
                android:layout_toRightOf="@+id/etSearch"
                android:layout_below="@id/tvHeader" />
           <ScrollView
               android:id="@+id/LLNews"
               android:layout_below="@+id/etSearch"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <RelativeLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <ImageButton
                       android:id="@+id/dwiS"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:background="@drawable/rafiahmad"/>
                   <TextView
                       android:id="@+id/tvJudulBerita"
                       android:layout_marginLeft="10dp"
                       android:layout_toRightOf="@+id/dwiS"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Header1"
                       android:textColor="@color/white"
                       android:textSize="18dp"
                       android:textStyle="bold" />
                   <ImageButton
                       android:id="@+id/edhiP"
                       android:layout_marginTop="10dp"
                       android:layout_below="@+id/dwiS"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:background="@drawable/keppers"/>
                   <TextView
                       android:id="@+id/tvJudulBerita1"
                       android:layout_marginTop="10dp"
                       android:layout_marginLeft="10dp"
                       android:layout_toRightOf="@id/edhiP"
                       android:layout_below="@+id/dwiS"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Header2"
                       android:textColor="@color/white"
                       android:textSize="18dp"
                       android:textStyle="bold"/>
                   <ImageButton
                       android:id="@+id/PssiPer"
                       android:layout_marginTop="10dp"
                       android:layout_below="@+id/edhiP"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:background="@drawable/gakmaudivaksin"/>
                   <TextView
                       android:id="@+id/tvJudulBerita2"
                       android:layout_marginTop="10dp"
                       android:layout_marginLeft="10dp"
                       android:layout_toRightOf="@id/PssiPer"
                       android:layout_below="@+id/edhiP"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Header3"
                       android:textColor="@color/white"
                       android:textSize="18dp"
                       android:textStyle="bold"/>
                   <ImageButton
                       android:id="@+id/vacine"
                       android:layout_marginTop="10dp"
                       android:layout_below="@+id/PssiPer"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:background="@drawable/pkb"/>
                   <TextView
                       android:id="@+id/tvJudulBerita3"
                       android:layout_marginTop="10dp"
                       android:layout_marginLeft="10dp"
                       android:layout_toRightOf="@id/vacine"
                       android:layout_below="@+id/PssiPer"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Header4"
                       android:textColor="@color/white"
                       android:textSize="18dp"
                       android:textStyle="bold"/>
                   <ImageButton
                       android:id="@+id/kapolri"
                       android:layout_marginTop="10dp"
                       android:layout_below="@+id/vacine"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:background="@drawable/dpr"/>
                   <TextView
                       android:id="@+id/tvJudulBerita4"
                       android:layout_marginTop="10dp"
                       android:layout_marginLeft="10dp"
                       android:layout_toRightOf="@id/kapolri"
                       android:layout_below="@+id/vacine"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Header5"
                       android:textColor="@color/white"
                       android:textSize="18dp"
                       android:textStyle="bold"/>
                   <ImageButton
                       android:id="@+id/bouy"
                       android:layout_marginTop="10dp"
                       android:layout_below="@+id/kapolri"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:background="@drawable/nasidem"/>
                   <TextView
                       android:id="@+id/tvJudulBerita5"
                       android:layout_marginTop="10dp"
                       android:layout_marginLeft="10dp"
                       android:layout_toRightOf="@id/bouy"
                       android:layout_below="@+id/kapolri"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Header6"
                       android:textColor="@color/white"
                       android:textSize="18dp"
                       android:textStyle="bold"/>
                   <ImageButton
                       android:id="@+id/bouy1"
                       android:layout_marginTop="10dp"
                       android:layout_below="@+id/bouy"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:background="@drawable/respon"/>
                   <TextView
                       android:id="@+id/tvJudulBerita6"
                       android:layout_marginTop="10dp"
                       android:layout_marginLeft="10dp"
                       android:layout_toRightOf="@id/bouy1"
                       android:layout_below="@+id/bouy"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Header7"
                       android:textColor="@color/white"
                       android:textSize="18dp"
                       android:textStyle="bold"/>
               </RelativeLayout>
           </ScrollView>
        </RelativeLayout>
</FrameLayout>